src/Moonglade.Web/wwwroot/css/src/moonglade-base.css
:root {
    --body-bg: #FFF;
    --box-shadow-light: rgba(0, 0, 0, 0.108);
    --box-shadow-medium: rgba(0, 0, 0, 0.132);
    --transparent-white-15: rgba(255, 255, 255, .15);
    --transparent-white-20: rgba(255, 255, 255, 0.2);
    --transparent-white-30: rgba(255, 255, 255, 0.3);
    --transparent-white-50: rgba(255, 255, 255, 0.5);
    --transparent-white-60: rgba(255, 255, 255, 0.6);
    --transparent-white-70: rgba(255, 255, 255, 0.7);
    --transparent-dark-1: rgba(0, 0, 0, .175);
    --transparent-dark-2: rgba(0, 0, 0, .125);
    --gray-0: #f2f2f2;
    --gray-1: #666;
    --gray-2: #555;
    --gray-3: #777;
    --gray-4: #EEE;
    --gray-5: #CCC;
    --gray-6: #333;
    --gray-7: #111;
    --moca-dark: #171717;
    --moca-dark-1: #1d2124;
    --moca-dark-2: #343a40;
}

::-webkit-scrollbar {
    width: 5px;
}

::-webkit-scrollbar-thumb {
    background: var(--gray);
}

::selection {
    background-color: var(--primary);
    color: var(--white);
    text-shadow: none;
}

body {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei";
    font-size: 0.9rem;
    padding-top: 50px;
    background-color: var(--body-bg);
}

a {
    color: var(--accent-color1);
    text-decoration: none;
}

    a:hover,
    a:focus {
        color: var(--accent-color1);
        text-decoration: none;
    }

    a.link-transparent {
        color: var(--transparent-white-70);
    }

        a.link-transparent:hover {
            color: var(--white);
        }

footer {
    color: var(--transparent-white-50);
}

    footer .container h4 {
        color: var(--transparent-white-60);
        font-size: 20px;
        font-weight: lighter;
        margin-bottom: 31px;
        text-transform: uppercase;
    }

    footer a {
        color: var(--transparent-white-70);
    }

        footer a:hover {
            color: var(--white);
        }

label {
    display: inline-block;
    font-weight: bold;
    margin-bottom: 5px;
    max-width: 100%;
}

.bg-lightgray-1 {
    background-color: var(--gray-0);
}

.color-transparent-white-50 {
    color: var(--transparent-white-50);
}

.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5 {
    font-weight: normal;
}

    h3 small {
        font-size: 60%;
    }

.box {
    background-color: var(--white);
    border: 1px solid var(--gray-4);
    padding: 1.5rem;
    box-shadow: 0 1.6px 3.6px 0 var(--box-shadow-medium),0 .3px .9px 0 var(--box-shadow-light);
}

.font-sairas {
    font-family: SairaSemiCondensed-Bold, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Microsoft YaHei" !important;
}

.btn-outline-footer {
    border-color: var(--transparent-white-50);
    color: var(--transparent-white-50);
}

    .btn-outline-footer:hover {
        border-color: var(--white);
        color: var(--white);
    }

.sec.sec-alter {
    background-color: var(--gray-0);
}

.sec {
    padding-bottom: 50px;
    padding-top: 50px;
}

.h-30px {
    height: 30px !important;
}

.h-100px {
    height: 100px !important;
}

.h-200px {
    height: 200px !important;
}

.h-300px {
    height: 300px !important;
}

.page-content .card-header {
    padding: 0.5rem !important;
}

.btn-round {
    border-radius: 50px !important;
}

.label-success {
    background-color: var(--green);
}

.list-group-item.active, .page-item.active .page-link {
    background-color: var(--accent-color1);
    border-color: var(--accent-color1);
}

.table .table-item-title {
    text-align: left;
}

.hottag-li a > span {
    display: block;
    font-size: 30px;
    font-weight: 100;
}

.hottag-li a {
    height: 80px !important;
    width: 156px;
}

.arch-media-logo svg {
    width: 60px;
}

.user-avatar-char {
    background-color: var(--purple);
    border-radius: 55px;
    color: var(--white);
    font-size: 30px;
    font-weight: 100;
    height: 55px;
    padding-top: 5px;
    text-align: center;
    width: 55px;
}

.ul-archive-item li {
    line-height: 24px;
}

.animate {
    -moz-transition: all .3s ease-in-out;
    -ms-transition: all .3s ease-in-out;
    -o-transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
    transition: all .3s ease-in-out;
}

.article-post-summary {
    position: relative;
}

.post-date-box {
    border: 1px solid var(--accent-color1);
    border-radius: 3px;
    position: absolute;
    width: 70px;
}

.post-date-day {
    color: var(--accent-color1);
    font-size: 42px;
    height: 58px;
    margin: 0;
    padding-right: 7px;
    text-align: right;
}

.post-date-month {
    background-color: var(--accent-color1);
    padding: 1px 10px;
    text-align: right;
}

.post-summary-title {
    font-size: 1.14rem;
}

.post-summary-box {
    margin-left: 105px;
}

.post-summary-text {
    line-height: 24px;
    word-break: break-all;
    word-wrap: break-word;
}

.post-summary-tags a {
    background-color: var(--accent-color1);
    font-size: 0.75rem;
    padding: 5px 10px;
}

    .post-summary-tags a:hover {
        background-color: var(--accent-color3);
        color: var(--white);
    }

.blog-info-desktop-lg {
    border-radius: 3px;
    overflow: hidden;
    position: relative;
}

.card-bkimg-container {
    height: 310px;
    overflow: hidden;
}

.card-bkimg {
    -moz-filter: blur(30px);
    -webkit-filter: blur(30px);
    filter: blur(30px);
    margin-left: -69px;
    margin-top: -57px;
    min-width: 150%;
}

.blogger-head-pic {
    border: 5px solid var(--transparent-white-50);
    height: 110px;
    width: 110px;
}

.blog-info-photo-text {
    padding-top: 40px;
    position: absolute;
    top: 32px;
    width: 100%;
    z-index: 999;
}

.bg-accent1 {
    background-color: var(--accent-color1);
}

.bg-accent2 {
    background-color: var(--accent-color2);
}

.bg-moca-dark {
    background-color: var(--moca-dark);
}

    .bg-moca-dark .list-group-item-action:focus,
    .bg-moca-dark .list-group-item-action:hover {
        background-color: var(--moca-dark-1) !important;
    }

.page-link {
    color: var(--accent-color1);
}

.comment-form-containter .badge {
    font-size: 100% !important;
}

.dropdown-menu {
    box-shadow: 0 6px 12px var(--transparent-dark-1);
}

.qrcode-link a {
    color: var(--transparent-white-50);
    cursor: pointer;
    display: inline-block;
    font-size: 25px;
    margin-right: 10px;
}

    .qrcode-link a:hover {
        color: var(--white);
    }

.moonglade-logo {
    font-size: 28px;
    line-height: 1px;
}

.toptags-list a {
    background-color: var(--accent-color1);
    margin-bottom: 10px;
    margin-right: 1px;
    padding: 5px 10px;
}

    .toptags-list a:hover {
        background-color: var(--accent-color3);
        color: var(--white);
    }

.lightswitch {
    background: var(--white);
    bottom: 20px;
    cursor: pointer;
    height: 32px;
    position: fixed;
    right: 20px;
    text-align: center;
    width: 32px;
    z-index: 996;
}

#lighticon {
    display: block;
    transform: translate(0, 50%);
}

